<resources>
    <string name="app_name">WhatsEye</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="app_slogan">Surveillez et gérez l\'utilisation de l\'appareil de votre enfant</string>
    <string name="app_icon">icône de l\'application</string>
    <string name="switch_to_phone_login">Passer à la connexion par téléphone</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="gender">Genre</string>
    <string name="birthday">Date de naissance</string>
    <string name="signup">S\'inscrire</string>
    <string name="username_or_email">Nom d\'utilisateur ou e-mail</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="send">Envoyer</string>
    <string name="reset_password">Réinitialiser le mot de passe</string>
    <string name="switch_to_phone_reset">Passer à la réinitialisation par téléphone</string>
    <string name="grant_permission">Accorder l\'autorisation</string>
    <string name="accessibility_permissions">Autorisations d\'accessibilité</string>
    <string name="accessibility_service_description">Surveillez et gérez l\'utilisation de WhatsApp</string>
    <string name="device_admin_service">Service d\'administration de l\'appareil</string>
    <string name="activate_device_admin">Activer l\'administration de l\'appareil</string>
    <string name="Admin_description">Protection contre la désinstallation</string>
    <string name="display_over_other_apps_permission">Afficher par-dessus d\'autres applications</string>
    <string name="usage_access">Accès à l\'utilisation</string>
    <string name="foreground_service">Service au premier plan</string>
    <string name="auto_start_description">Pour garantir le bon fonctionnement de l\'application après le démarrage, veuillez activer le démarrage automatique.</string>
    <string name="activate_auto_start">Activer le démarrage automatique</string>
    <string name="auto_start_service">Service de démarrage automatique</string>
    <string name="enable_ignore_battery_optimization">Activer l\'ignorance de l\'optimisation de la batterie</string>
    <string name="enable_file_access">Activer l\'accès aux fichiers</string>
    <string name="file_access">Accès aux fichiers</string>
    <string name="ignore_battery_optimization">Ignorer l\'optimisation de la batterie</string>
    <string name="enable_notifications">Activer les notifications</string>
    <string name="unlock">Déverrouiller</string>
    <string name="enter_pin">Entrez votre code PIN</string>
    <string name="digit_1">Premier chiffre</string>
    <string name="digit_2">Deuxième chiffre</string>
    <string name="digit_3">Troisième chiffre</string>
    <string name="digit_4">Quatrième chiffre</string>
    <string name="digit_5">Cinquième chiffre</string>
    <string name="loading">Chargement...</string>
    <string name="try_link_again">Réessayer le lien</string>
    <string name="please_follow_these_steps_to_link_whatsapp">Veuillez suivre ces étapes pour lier WhatsApp :</string>
    <string name="_1_click_on_the_whatsapp_notification_2_enter_the_code_from_the_whatseye_notification">1. Cliquez sur la notification WhatsApp.\n2. Entrez le code de la notification WhatsEye.</string>
    <string name="schedule_list">Liste des horaires</string>
    <string name="settings">Paramètres</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">E-mail</string>
    <string name="change_photo">Changer la photo</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="save_changes">Enregistrer les modifications</string>
    <string name="phone_locked">Verrouiller WhatsApp</string>
    <string name="change_pin">Changer le code PIN</string>
    <string name="edit_profile">Modifier le profil</string>
    <string name="previous_date">Date précédente</string>
    <string name="next_date">Date suivante</string>
    <string name="placeholder_name">John Doe</string>
    <string name="placeholder_username">aza</string>
    <string name="placeholder_email">utilisateur@exemple.com</string>
    <string name="placeholder_phone">+1 234 567 890</string>
    <string name="placeholder_date">28 septembre 2023</string>
    <string name="logout">Déconnexion</string>
    <string name="agree_and_continue">Accepter et continuer</string>
    <string name="Disclaimer">Vous allez vous connecter à WhatsApp Web sur votre téléphone. Nous n\'avons aucun contrôle sur votre compte.</string>
    <string name="allow_background_location">Autoriser la localisation en arrière-plan</string>
    <string name="to_provide_accurate_activity_monitoring_please_allow_background_location_access">Pour fournir une surveillance précise de l\'activité, veuillez autoriser l\'accès à la localisation en arrière-plan.</string>
    <string name="background_location">Localisation en arrière-plan</string>
    <string name="pour_surveiller_et_g_rer_l_utilisation_des_applications_cette_application_n_cessite_les_permissions_d_accessibilit_veuillez_accorder_les_permissions_n_cessaires_pour_continuer">Pour surveiller et gérer l\'utilisation de WhatsApp, cette application nécessite les permissions d\'accessibilité. Veuillez accorder les permissions nécessaires pour continuer.</string>
    <string name="to_monitor_and_manage_app_usage_this_application_requires_device_admin_permissions_please_grant_the_necessary_permissions_to_continue">Pour surveiller et gérer l\'utilisation de WhatsApp, cette application nécessite les permissions d\'administrateur de l\'appareil. Veuillez les accorder pour continuer.</string>
    <string name="to_access_and_manage_files_this_application_requires_file_access_permissions_please_grant_the_necessary_permissions_to_continue">Pour accéder et gérer les fichiers, cette application nécessite les permissions d\'accès aux fichiers. Veuillez les accorder pour continuer.</string>
    <string name="_1_tap_the_enable_file_access_button_2_review_the_permissions_and_tap_allow_3_return_to_the_app_to_continue">1. Touchez le bouton \'Activer l\'accès aux fichiers\'.\n2. Vérifiez les permissions et touchez \'Autoriser\'.\n3. Revenez à l\'application pour continuer.</string>
    <string name="to_ensure_the_app_runs_smoothly_and_can_monitor_app_usage_in_the_background_please_grant_the_ignore_battery_optimization_permission">Pour assurer le bon fonctionnement de l\'application et permettre la surveillance en arrière-plan, veuillez accorder la permission d\'ignorer l\'optimisation de la batterie.</string>
    <string name="_1_tap_the_enable_ignore_battery_optimization_button_2_review_the_permissions_and_tap_allow_3_return_to_the_app_to_continue">1. Touchez le bouton \'Activer l\'ignorer l\'optimisation de la batterie\'.\n2. Vérifiez les permissions et touchez \'Autoriser\'.\n3. Revenez à l\'application pour continuer.</string>
    <string name="microphone_permission">Permission du microphone</string>
    <string name="this_app_requires_microphone_access_to_function_properly_please_select_allow_only_while_using_the_app_to_continue">Cette application nécessite l\'accès au microphone pour fonctionner correctement. Veuillez sélectionner \'Autoriser uniquement pendant l\'utilisation de l\'application\' pour continuer.</string>
    <string name="to_monitor_and_manage_app_notifications_this_application_requires_notification_permissions_please_grant_the_necessary_permissions_to_continue">Pour surveiller et gérer les notifications des applications, cette application nécessite les permissions de notification. Veuillez les accorder pour continuer.</string>
    <string name="_1_tap_the_enable_notifications_button_2_review_the_permissions_and_tap_allow_3_return_to_the_app_to_continue">1. Touchez le bouton \'Activer les notifications\'.\n2. Vérifiez les permissions et touchez \'Autoriser\'.\n3. Revenez à l\'application pour continuer.</string>
    <string name="open_whatsapp">Ouvrir WhatsApp</string>
    <string name="to_monitor_and_manage_app_usage_this_application_requires_permission_to_display_over_other_apps_please_grant_the_necessary_permissions_to_continue">Pour surveiller et gérer l\'utilisation de WhatsApp, cette application nécessite la permission d\'afficher par-dessus d\'autres applications. Veuillez l\'accorder pour continuer.</string>
    <string name="_1_tap_the_enable_display_over_other_apps_button_2_review_the_permissions_and_tap_allow_3_return_to_the_app_to_continue">1. Touchez le bouton \'Activer l\'affichage par-dessus d\'autres applications\'.\n2. Vérifiez les permissions et touchez \'Autoriser\'.\n3. Revenez à l\'application pour continuer.</string>
    <string name="to_monitor_and_manage_app_usage_this_application_requires_usage_access_permissions_please_grant_the_necessary_permissions_to_continue">Pour surveiller et gérer l\'utilisation de WhatsApp, cette application nécessite les permissions d\'accès à l\'utilisation. Veuillez les accorder pour continuer.</string>
    <string name="_1_tap_the_enable_usage_access_button_2_review_the_permissions_and_tap_allow_3_return_to_the_app_to_continue">1. Touchez le bouton \'Activer l\'accès à l\'utilisation\'.\n2. Vérifiez les permissions et touchez \'Autoriser\'.\n3. Revenez à l\'application pour continuer.</string>
    <string-array name="gender_options">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
</resources>